# wxVersion

./: .gitignore  CMakeLists.txt  README.md
app/build_scripts/: build_cmdlinetest_macbook.py  build_cmdlinetest_macpro.py  build_function.py
app/cmdlinetest/: CMakeLists.txt  main.cpp
app/cmdlinetest/src/: main.cpp
app/dlgtest/: CMakeLists.txt  dlgbmp.cpp  dlgbmp.h  dlgtest.icns  main.cpp  resource.rc
cmake/: FindwxWidgets.cmake  Use_visualstudioMT.cmake
src/: wxhgversion_core.cpp  wxhgversion_core.h  wxhgversion_dlg.cpp  wxhgversion_dlg.h  wxhgversion_param.h.in  wxversion_core.cpp  wxversion_core.h  wxversion_dlg.cpp  wxversion_dlg.h  wxversion_param.h.in
